Add logo and nav bar to header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <header>
+            <img src="images/logo-audioengine.png" alt="Audio Engine logo">
+            <nav>
+                <ul>
+                    <li><a href="#0">Speakers</a></li>
+                    <li><a href="#0">Components</a></li>
+                    <li><a href="#0">Deals</a></li>
+                    <li><a href="#0">Explore</a></li>
+                    <li><a href="#0">Support</a></li>
+                </ul>
+            </nav>
+        </header>
 
+        <main>
+
+        </main>
+
+        <footer>
+
+        </footer>
+    </div>
 </body>
 
 </html>
