--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                     <li><a href="#0">Support</a></li>
                 </ul>
             </nav>
+            <div class="icons-container">
+                <img src="images/icons/icon-map-marker.png" alt="Map marker icon">
+                <img src="images/icons/icon-search.png" alt="Search icon">
+                <img src="images/icons/icon-shopping-cart.png" alt="Shopping cart icon">
+            </div>
         </header>
 
         <main>
