Add div overlay to prevent scroll when mobile nav menu is open
Add link to scripts.js file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
         <header>
             <!-- MOBILE NAV MENU START -->
-            <img class="hamburger-menu" src="images/icons/icon-hamburger-menu.png" alt="Mobile Nav Hamburger Menu">
+            <img id="hamburger-menu" class="hamburger-menu" src="images/icons/icon-hamburger-menu.png" alt="Mobile Nav Hamburger Menu">
 
             <nav class="mobile-nav">
                 <ul>
@@ -27,6 +27,8 @@
                     <li><a href="#0">Support</a></li>
                 </ul>
             </nav>
+
+            <div class="mobile-nav-overlay"></div>
             <!-- MOBILE NAV MENU END -->
 
             <img src="images/logo-audioengine.png" alt="Audio Engine logo">
@@ -56,6 +58,7 @@
 
         </footer>
     </div>
+    <script src="scripts/scripts.js"></script>
 </body>
 
 </html>
