Update names of nav menus to include 'menu' to make them more distinct

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- MOBILE NAV MENU START -->
             <img id="hamburger-menu" class="hamburger-menu" src="images/icons/icon-hamburger-menu.png" alt="Mobile Nav Hamburger Menu">
 
-            <nav class="mobile-nav">
+            <nav class="mobile-nav-menu">
                 <ul>
                     <li><a href="#0">Speakers</a></li>
                     <li><a href="#0">Components</a></li>
@@ -33,7 +33,7 @@
 
             <img src="images/logo-audioengine.png" alt="Audio Engine logo">
 
-            <nav class="desktop-nav">
+            <nav class="desktop-nav-menu">
                 <ul>
                     <li><a href="#0">Speakers</a></li>
                     <li><a href="#0">Components</a></li>
