--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- MOBILE NAV MENU START -->
             <img id="hamburger-menu" class="hamburger-menu" src="images/icons/icon-hamburger-menu.png" alt="Mobile Nav Hamburger Menu">
 
-            <nav class="mobile-nav-menu">
+            <nav id="mobile-nav-menu" class="mobile-nav-menu">
                 <ul>
                     <li><a href="#0">Speakers</a></li>
                     <li><a href="#0">Components</a></li>
