Add id to mobile nav menu overlay for javascript use

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </ul>
             </nav>
 
-            <div class="mobile-nav-overlay"></div>
+            <div id="mobile-nav-overlay" class="mobile-nav-overlay"></div>
             <!-- MOBILE NAV MENU END -->
 
             <img src="images/logo-audioengine.png" alt="Audio Engine logo">
