--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/styles.css">
     <title>Audio Engine</title>
@@ -16,7 +17,8 @@
     <div class="wrapper">
         <header>
             <!-- MOBILE NAV MENU START -->
-            <img id="hamburger-menu" class="hamburger-menu" src="images/icons/icon-hamburger-menu.png" alt="Mobile Nav Hamburger Menu">
+            <img id="hamburger-menu" class="hamburger-menu" src="images/icons/icon-hamburger-menu.png"
+                alt="Mobile Nav Hamburger Menu icon">
 
             <nav id="mobile-nav-menu" class="mobile-nav-menu">
                 <ul>
@@ -28,7 +30,9 @@
                 </ul>
             </nav>
 
-            <div id="mobile-nav-overlay" class="mobile-nav-overlay"></div>
+            <div id="mobile-nav-overlay" class="mobile-nav-overlay">
+                <img id="close-x-icon" class="close-x-icon" src="images/icons/icon-close.png" alt="Close X icon">
+            </div>
             <!-- MOBILE NAV MENU END -->
 
             <img src="images/logo-audioengine.png" alt="Audio Engine logo">
