--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/styles.css">
     <title>Audio Engine</title>
@@ -17,8 +16,7 @@
     <div class="wrapper">
         <header>
             <!-- MOBILE NAV MENU START -->
-            <img id="hamburger-menu" class="hamburger-menu" src="images/icons/icon-hamburger-menu.png"
-                alt="Mobile Nav Hamburger Menu icon">
+            <img id="hamburger-menu" class="hamburger-menu" src="images/icons/icon-hamburger-menu.png" alt="Mobile Nav Hamburger Menu icon">
 
             <nav id="mobile-nav-menu" class="mobile-nav-menu">
                 <ul>
