Add a tag to logo to allow linking to home page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <!-- MOBILE NAV MENU END -->
 
-            <img src="images/logo-audioengine.png" alt="Audio Engine logo">
+            <a href="index.html"><img class="audioengine-logo" src="images/logo-audioengine.png" alt="Audio Engine logo"></a>
 
             <nav class="desktop-nav-menu">
                 <ul>
