Add section for audioengine hero

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             </div>
             <!-- MOBILE NAV MENU END -->
 
-            <a href="index.html"><img class="audioengine-logo" src="images/logo-audioengine.png" alt="Audio Engine logo"></a>
+            <a href="index.html">
+                <img class="audioengine-logo" src="images/logo-audioengine.png" alt="Audio Engine logo">
+            </a>
 
             <nav class="desktop-nav-menu">
                 <ul>
@@ -53,7 +55,9 @@
         </header>
 
         <main>
-
+            <section class="audioengine-hero">
+                <!-- <img src="images/banner/banner-01-speaker-black.jpg" alt="Black Speaker"> -->
+            </section>
         </main>
 
         <footer>
