--- a/index.html
+++ b/index.html
@@ -13,46 +13,43 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <header>
-            <!-- MOBILE NAV MENU START -->
-            <img id="hamburger-menu" class="hamburger-menu" src="images/icons/icon-hamburger-menu.png" alt="Mobile Nav Hamburger Menu icon">
-
-            <nav id="mobile-nav-menu" class="mobile-nav-menu">
-                <ul>
-                    <li><a href="#0">Speakers</a></li>
-                    <li><a href="#0">Components</a></li>
-                    <li><a href="#0">Deals</a></li>
-                    <li><a href="#0">Explore</a></li>
-                    <li><a href="#0">Support</a></li>
-                </ul>
-            </nav>
-
-            <div id="mobile-nav-overlay" class="mobile-nav-overlay">
-                <img id="close-x-icon" class="close-x-icon" src="images/icons/icon-close.png" alt="Close X icon">
-            </div>
-            <!-- MOBILE NAV MENU END -->
-
-            <a href="index.html">
-                <img class="audioengine-logo" src="images/logo-audioengine.png" alt="Audio Engine logo">
-            </a>
-
-            <nav class="desktop-nav-menu">
-                <ul>
-                    <li><a href="#0">Speakers</a></li>
-                    <li><a href="#0">Components</a></li>
-                    <li><a href="#0">Deals</a></li>
-                    <li><a href="#0">Explore</a></li>
-                    <li><a href="#0">Support</a></li>
-                </ul>
-            </nav>
-
-            <div class="icons-container">
-                <img src="images/icons/icon-map-marker.png" alt="Map marker icon">
-                <img src="images/icons/icon-search.png" alt="Search icon">
-                <img src="images/icons/icon-shopping-cart.png" alt="Shopping cart icon">
-            </div>
-        </header>
+    <div class="page-wrapper">
+        <div class="header-wrapper">
+            <header>
+                <!-- MOBILE NAV MENU START -->
+                <img id="hamburger-menu" class="hamburger-menu" src="images/icons/icon-hamburger-menu.png" alt="Mobile Nav Hamburger Menu icon">
+                <nav id="mobile-nav-menu" class="mobile-nav-menu">
+                    <ul>
+                        <li><a href="#0">Speakers</a></li>
+                        <li><a href="#0">Components</a></li>
+                        <li><a href="#0">Deals</a></li>
+                        <li><a href="#0">Explore</a></li>
+                        <li><a href="#0">Support</a></li>
+                    </ul>
+                </nav>
+                <div id="mobile-nav-overlay" class="mobile-nav-overlay">
+                    <img id="close-x-icon" class="close-x-icon" src="images/icons/icon-close.png" alt="Close X icon">
+                </div>
+                <!-- MOBILE NAV MENU END -->
+                <a href="index.html">
+                    <img class="audioengine-logo" src="images/logo-audioengine.png" alt="Audio Engine logo">
+                </a>
+                <nav class="desktop-nav-menu">
+                    <ul>
+                        <li><a href="#0">Speakers</a></li>
+                        <li><a href="#0">Components</a></li>
+                        <li><a href="#0">Deals</a></li>
+                        <li><a href="#0">Explore</a></li>
+                        <li><a href="#0">Support</a></li>
+                    </ul>
+                </nav>
+                <div class="icons-container">
+                    <img src="images/icons/icon-map-marker.png" alt="Map marker icon">
+                    <img src="images/icons/icon-search.png" alt="Search icon">
+                    <img src="images/icons/icon-shopping-cart.png" alt="Shopping cart icon">
+                </div>
+            </header>
+        </div>
 
         <main>
             <section class="audioengine-hero"></section>
