--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 </head>
 
 <body>
+    <!-- WRAPPER FOR PAGE CONTENT -->
     <div class="page-wrapper">
+        <!-- WRAPPER FOR HEADER TO KEEP CONTENT CENTERED BEYOND 1200px -->
         <div class="header-wrapper">
             <header>
                 <!-- MOBILE NAV MENU START -->
                 <img id="hamburger-menu" class="hamburger-menu" src="images/icons/icon-hamburger-menu.png" alt="Mobile Nav Hamburger Menu icon">
+
                 <nav id="mobile-nav-menu" class="mobile-nav-menu">
                     <ul>
                         <li><a href="#0">Speakers</a></li>
@@ -27,13 +30,17 @@
                         <li><a href="#0">Support</a></li>
                     </ul>
                 </nav>
+
                 <div id="mobile-nav-overlay" class="mobile-nav-overlay">
-                    <img id="close-x-icon" class="close-x-icon" src="images/icons/icon-close.png" alt="Close X icon">
+                    <img id="close-x-icon" class="close-x-icon" src="images/icons/icon-close.png" alt="Close X icon for mobile nav menu">
                 </div>
                 <!-- MOBILE NAV MENU END -->
+
                 <a href="index.html">
                     <img class="audioengine-logo" src="images/logo-audioengine.png" alt="Audio Engine logo">
                 </a>
+
+                <!-- DESKTOP NAV MENU START -->
                 <nav class="desktop-nav-menu">
                     <ul>
                         <li><a href="#0">Speakers</a></li>
@@ -43,11 +50,13 @@
                         <li><a href="#0">Support</a></li>
                     </ul>
                 </nav>
+
                 <div class="icons-container">
-                    <img src="images/icons/icon-map-marker.png" alt="Map marker icon">
-                    <img src="images/icons/icon-search.png" alt="Search icon">
+                    <img src="images/icons/icon-map-marker.png" alt="Store locator or map icon">
+                    <img src="images/icons/icon-search.png" alt="Magnifying glass search icon">
                     <img src="images/icons/icon-shopping-cart.png" alt="Shopping cart icon">
                 </div>
+                <!-- DESKTOP NAV MENU END -->
             </header>
         </div>
 
