Add card to overlay on hero image

--- a/index.html
+++ b/index.html
@@ -61,7 +61,15 @@
         </div>
 
         <main>
-            <section class="audioengine-hero"></section>
+            <section class="audioengine-hero">
+                <article class="audioengine-hero-card">
+                    <h1>Spotify, Pandora</h1>
+                    <p>All your favorite music apps<br>
+                        apps play instantly
+                    </p>
+                    <button>Shop wireless speakers</button>
+                </article>
+            </section>
         </main>
 
         <footer>
