Add space for readability of different elements

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <!-- WRAPPER FOR HEADER TO KEEP CONTENT CENTERED BEYOND 1200px -->
         <div class="header-wrapper">
             <header>
-                <!-- MOBILE NAV MENU START -->
                 <img id="hamburger-menu" class="hamburger-menu" src="images/icons/icon-hamburger-menu.png" alt="Mobile Nav Hamburger Menu icon">
 
+                <!-- MOBILE NAV MENU START -->
                 <nav id="mobile-nav-menu" class="mobile-nav-menu">
                     <ul>
                         <li><a href="#0">Speakers</a></li>
@@ -64,9 +64,7 @@
             <section class="audioengine-hero">
                 <article class="audioengine-hero-card">
                     <h1>Spotify, Pandora</h1>
-                    <p>All your favorite music apps<br>
-                        apps play instantly
-                    </p>
+                    <p>All your favorite music apps play instantly</p>
                     <button>Shop wireless speakers</button>
                 </article>
             </section>
