Add second p tag and wrap both in a parent container

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
             <section class="audioengine-hero">
                 <article class="audioengine-hero-card">
                     <h1>Spotify, Pandora</h1>
-                    <p>All your favorite music apps play instantly</p>
+                    <div class="p-container">
+                        <p>All your favorite music</p>
+                        <p>apps play instantly</p>
+                    </div>
                     <button>Shop wireless speakers</button>
                 </article>
             </section>
