Remove p container and add back <br>
Update hero card styles to reflect p tag update

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <article class="audioengine-hero-card">
                     <h1>Spotify, Pandora</h1>
                     <div class="p-container">
-                        <p>All your favorite music</p>
-                        <p>apps play instantly</p>
+                        <p>All your favorite music <br>
+                            apps play instantly</p>
                     </div>
                     <button>Shop wireless speakers</button>
                 </article>
