--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <h1>Spotify, Pandora</h1>
                     <p>All your favorite music <br>
                         apps play instantly</p>
-                    <button>Shop wireless speakers</button>
+                    <a>Shop wireless speakers</a>
                 </article>
             </section>
         </main>
