--- a/index.html
+++ b/index.html
@@ -51,11 +51,17 @@
                     </ul>
                 </nav>
 
-                <div class="icons-container">
-                    <img src="images/icons/icon-map-marker.png" alt="Store locator or map icon">
-                    <img src="images/icons/icon-search.png" alt="Magnifying glass search icon">
-                    <img src="images/icons/icon-shopping-cart.png" alt="Shopping cart icon">
-                </div>
+                <ul class="icons-container">
+                    <li>
+                        <img src="images/icons/icon-map-marker.png" alt="Store locator or map icon">
+                    </li>
+                    <li>
+                        <img src="images/icons/icon-search.png" alt="Magnifying glass search icon">
+                    </li>
+                    <li>
+                        <img src="images/icons/icon-shopping-cart.png" alt="Shopping cart icon">
+                    </li>
+                </ul>
                 <!-- DESKTOP NAV MENU END -->
             </header>
         </div>
@@ -68,6 +74,61 @@
                         apps play instantly</p>
                     <a href="#0">Shop wireless speakers</a>
                 </article>
+            </section>
+
+            <section class="shop-speakers">
+                <section class="popular-speakers">
+                    <h2>Best sellers</h2>
+
+                    <ul>
+                        <li>
+                            <img src="images/best_seller/best-seller-01-speaker-red.jpg" alt="Picture of a pair of A2+ red desktop speakers">
+                            <h3>A2+ Desktop Speakers</h3>
+                            <a href="#0">Shop now</a>
+                        </li>
+                        <li>
+                            <img src="images/best_seller/best-seller-01-speaker-red.jpg" alt="Picture of a pair of A2+ red desktop speakers">
+                            <h3>A2+ Desktop Speakers</h3>
+                            <a href="#0">Shop now</a>
+                        </li>
+                        <li>
+                            <img src="images/best_seller/best-seller-01-speaker-red.jpg" alt="Picture of a pair of A2+ red desktop speakers">
+                            <h3>A2+ Desktop Speakers</h3>
+                            <a href="#0">Shop now</a>
+                        </li>
+                    </ul>
+                </section>
+
+                <section class="shop-by-room-or-device">
+                    <h2>Shop by room or device</h2>
+
+                    <ul>
+                        <li>
+                            <a class="bubble-shop-container">
+                                <img src="images/shop_gallery/shop-slider-01-speaker-white.jpg" alt="With Sonos speakers">
+                                <p>With Sonos</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="bubble-shop-container">
+                                <img src="images/shop_gallery/shop-slider-01-speaker-white.jpg" alt="With Sonos speakers">
+                                <p>With Sonos</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="bubble-shop-container">
+                                <img src="images/shop_gallery/shop-slider-01-speaker-white.jpg" alt="With Sonos speakers">
+                                <p>With Sonos</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="bubble-shop-container">
+                                <img src="images/shop_gallery/shop-slider-01-speaker-white.jpg" alt="With Sonos speakers">
+                                <p>With Sonos</p>
+                            </a>
+                        </li>
+                    </ul>
+                </section>
             </section>
         </main>
 
