--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
                 <section class="popular-speakers">
                     <h2>Best sellers</h2>
 
-                    <ul>
+                    <ul class="current-popular-speakers">
                         <li>
-                            <img src="images/best_seller/best-seller-01-speaker-red.jpg" alt="Picture of a pair of A2+ red desktop speakers">
+                            <img src="images/best_seller/best-seller-01-speaker-red.jpg" alt="A pair of A2+ red desktop speakers">
                             <h3>A2+ Desktop Speakers</h3>
                             <a href="#0">Shop now</a>
                         </li>
                         <li>
-                            <img src="images/best_seller/best-seller-01-speaker-red.jpg" alt="Picture of a pair of A2+ red desktop speakers">
+                            <img src="images/best_seller/best-seller-02-bluetooth-receiver.jpg" alt="A bluetooth music receiver with antenna">
                             <h3>A2+ Desktop Speakers</h3>
                             <a href="#0">Shop now</a>
                         </li>
                         <li>
-                            <img src="images/best_seller/best-seller-01-speaker-red.jpg" alt="Picture of a pair of A2+ red desktop speakers">
+                            <img src="images/best_seller/best-seller-03-speaker-black.jpg" alt="A pair of A5+ wireless speakers">
                             <h3>A2+ Desktop Speakers</h3>
                             <a href="#0">Shop now</a>
                         </li>
