Update h3 descriptions for other 2 speakers

--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
                         </li>
                         <li>
                             <img src="images/best_seller/best-seller-02-bluetooth-receiver.jpg" alt="A bluetooth music receiver with antenna">
-                            <h3>A2+ Desktop Speakers</h3>
+                            <h3>B1 Bluetooth music receiver</h3>
                             <a href="#0">Shop now</a>
                         </li>
                         <li>
                             <img src="images/best_seller/best-seller-03-speaker-black.jpg" alt="A pair of A5+ wireless speakers">
-                            <h3>A2+ Desktop Speakers</h3>
+                            <h3>A5+ wireless speakers</h3>
                             <a href="#0">Shop now</a>
                         </li>
                     </ul>
