Add href attribute to bubble container images

--- a/index.html
+++ b/index.html
@@ -104,25 +104,25 @@
 
                     <ul class="room-or-device">
                         <li>
-                            <a class="bubble-shop-container">
+                            <a href="#0" class="bubble-shop-container">
                                 <img src="images/shop_gallery/shop-slider-01-speaker-white.jpg" alt="With Sonos speakers">
                                 <h3>With <br> Sonos</h3>
                             </a>
                         </li>
                         <li>
-                            <a class="bubble-shop-container">
+                            <a href="#0" class="bubble-shop-container">
                                 <img src="images/shop_gallery/shop-slider-03-speakers-brown.jpg" alt="With a turntable">
                                 <h3>With a turntable</h3>
                             </a>
                         </li>
                         <li>
-                            <a class="bubble-shop-container">
+                            <a href="#0" class="bubble-shop-container">
                                 <img src="images/shop_gallery/shop-slider-04-speakers-brown.jpg" alt="TV room">
                                 <h3>TV <br> room</h3>
                             </a>
                         </li>
                         <li>
-                            <a class="bubble-shop-container">
+                            <a href="#0" class="bubble-shop-container">
                                 <img src="images/shop_gallery/shop-slider-05-speakers-brown.jpg" alt="Kitchen">
                                 <h3>Kitchen</h3>
                             </a>
