Add image directly to HTML for better control over displaying text on image

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
         <main>
             <section class="audioengine-hero">
+                <img src="images/banner/banner-01-speaker-black-square.jpg" alt="">
                 <article class="audioengine-hero-card">
                     <h1>Spotify, Pandora</h1>
                     <p>All your favorite music <br>
