Update img tag to be wrapped in a picture tag to control mobile and desktop hero image display

--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
 
         <main>
             <section class="audioengine-hero">
-                <img src="images/banner/banner-01-speaker-black-square.jpg" alt="">
+                <picture>
+                    <source srcset="images/banner/banner-01-speaker-black.jpg" media="(width >= 48em)">
+                    <img src="images/banner/banner-01-speaker-black-square.jpg" alt="">
+                </picture>
                 <article class="audioengine-hero-card">
                     <h1>Spotify, Pandora</h1>
                     <p>All your favorite music <br>
