Add br tag to control display of shop by room or device and update spacing between bubble shop items for more breathing room

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </section>
 
                 <section class="shop-by-room-or-device">
-                    <h2>Shop by room or device</h2>
+                    <h2>Shop by room <br> or device</h2>
 
                     <ul class="room-or-device">
                         <li>
