Add the 'all new' section to audio engine

--- a/index.html
+++ b/index.html
@@ -134,6 +134,18 @@
                     </ul>
                 </section>
             </section>
+
+            <section class="all-new-section">
+                <picture>
+                    <source srcset="images/background/bg-all-new-section.jpg" media="(width >= 48em)">
+                    <img src="images/background/bg-all-new-section-phone-square.jpg" alt="">
+                </picture>
+                <article class="all-new-section-card">
+                    <h2>All new</h2>
+                    <p>The A5+ Wireless Speakers</p>
+                    <a href="#0">Learn more</a>
+                </article>
+            </section>
         </main>
 
         <footer>
