Add speaker comparison section

--- a/index.html
+++ b/index.html
@@ -146,6 +146,37 @@
                     <a href="#0">Learn more</a>
                 </article>
             </section>
+
+            <section class="speaker-comparison">
+                <h2>Speaker comparison</h2>
+
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Model</th>
+                            <th>FR</th>
+                            <th>Price</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>A5+</td>
+                            <td>40Hz-20kHz</td>
+                            <td><s>&#36;999</s> &#36;8999</td>
+                        </tr>
+                        <tr>
+                            <td>A3</td>
+                            <td>60Hz-20kHz</td>
+                            <td>&#36;799</td>
+                        </tr>
+                        <tr>
+                            <td>A2</td>
+                            <td>80Hz-20kHz</td>
+                            <td>&#36;599</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
         </main>
 
         <footer>
