Add span to color discount prices differently

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <tr>
                             <td>A5+</td>
                             <td>40Hz-20kHz</td>
-                            <td><s>&#36;999</s> &#36;8999</td>
+                            <td><s>&#36;999</s> <span class="discount-price">&#36;899</span></td>
                         </tr>
                         <tr>
                             <td>A3</td>
