Add 'our story' section

--- a/index.html
+++ b/index.html
@@ -177,6 +177,18 @@
                     </tbody>
                 </table>
             </section>
+
+            <section class="our-story">
+                <picture>
+                    <source srcset="images/background/bg-our-story-section.jpg" media="(width >= 48em)">
+                    <img src="images/background/bg-our-story-section-tablet.jpg" alt="">
+                </picture>
+                <article class="our-story-card">
+                    <h2>Our story</h2>
+                    <p>Audioengine was founded with a simple goal. Build a speaker sounds great, is easy to set up and use, and that makes people want to listen to music every day.</p>
+                    <a href="#0">Learn more</a>
+                </article>
+            </section>
         </main>
 
         <footer>
