Add start of 'in the news' section

--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@
                     <a href="#0">Learn more</a>
                 </article>
             </section>
+
+            <section class="in-the-news">
+                <h2>In the news</h2>
+            </section>
         </main>
 
         <footer>
