Add br and em tags to audioengine quote

--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
                 </picture>
                 <article class="our-story-card">
                     <h2>Our story</h2>
-                    <p>Audioengine was founded with a simple goal. Build a speaker sounds great, is easy to set up and use, and that makes people want to listen to music every day.</p>
+                    <p>Audioengine was founded with a simple goal.<br>
+                        <em>Build a speaker that sounds great, is easy to set up and use, and that makes people want to listen to music every day.</em>
+                    </p>
                     <a href="#0">Learn more</a>
                 </article>
             </section>
