--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <article class="our-story-card">
                     <h2>Our story</h2>
                     <p>Audioengine was founded with a simple goal.<br>
-                        <em>Build a speaker that sounds great, is easy to set up and use, and that makes people want to listen to music every day.</em>
+                        <em>Build a speaker that sounds great, is easy to set up and use, and that makes people want to listen to music every <br> day.</em>
                     </p>
                     <a href="#0">Learn more</a>
                 </article>
