--- a/index.html
+++ b/index.html
@@ -194,6 +194,14 @@
 
             <section class="in-the-news">
                 <h2>In the news</h2>
+
+                <article class="icon-container">
+                    <img src="images/logos/in-the-news-slider-01-rolling-stone.jpg" alt="Rolling Stone logo">
+                    <img src="images/logos/in-the-news-slider-02-mens-health.jpg" alt="Men's Health logo">
+                    <img src="images/logos/in-the-news-slider-03-forbes-life.jpg" alt="Forbes Life logo">
+                    <img src="images/logos/in-the-news-slider-04-chicago-tribune.jpg" alt="Chicago in-the-news-slider-04-chicago-tribune">
+                    <img src="images/logos/in-the-news-slider-05-gear-patrol.jpg" alt="Gear Patrol logo">
+                </article>
             </section>
         </main>
 
