Add start of 'this is audio engine' section

--- a/index.html
+++ b/index.html
@@ -203,6 +203,10 @@
                     <img src="images/logos/in-the-news-slider-05-gear-patrol.jpg" alt="Gear Patrol logo">
                 </article>
             </section>
+
+            <section class="this-is-audio-engine">
+                <h2>This is audio engine</h2>
+            </section>
         </main>
 
         <footer>
