Change name of logo container to represent it as a 'logos container'

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </ul>
                 </nav>
 
-                <ul class="icons-container">
+                <ul class="header-icons-container">
                     <li>
                         <img src="images/icons/icon-map-marker.png" alt="Store locator or map icon">
                     </li>
@@ -195,7 +195,7 @@
             <section class="in-the-news">
                 <h2>In the news</h2>
 
-                <article class="icon-container">
+                <article class="audio-engine-logos-container">
                     <img src="images/logos/in-the-news-slider-01-rolling-stone.jpg" alt="Rolling Stone logo">
                     <img src="images/logos/in-the-news-slider-02-mens-health.jpg" alt="Men's Health logo">
                     <img src="images/logos/in-the-news-slider-03-forbes-life.jpg" alt="Forbes Life logo">
