Add 'this is audio engine' section and add 'this is audio engine' section square to images

--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@
             </section>
 
             <section class="this-is-audio-engine">
+                <picture>
+                    <source srcset="images/background/bg-this-is-audio-engine-section.jpg" media="(width >= 48em)">
+                    <img src="images/background/bg-this-is-audio-engine-section-square.jpg" alt="">
+                </picture>
                 <h2>This is audio engine</h2>
             </section>
         </main>
