Add 'join us' section

--- a/index.html
+++ b/index.html
@@ -212,6 +212,15 @@
                 </picture>
                 <h2>This is audio engine</h2>
             </section>
+
+            <section class="join-us">
+                <h2>Join us today!</h2>
+                <p>Sign up now to get exclusive access to our features.</p>
+                <form action="" method="post">
+                    <input type="email" name="email" autocomplete="on" required>
+                    <input type="submit" value="Subscribe">
+                </form>
+            </section>
         </main>
 
         <footer>
