--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <h2>Join us today!</h2>
                 <p>Sign up now to get exclusive access to our features.</p>
                 <form action="" method="post">
-                    <input type="email" name="email" autocomplete="on" required>
+                    <input type="email" name="email" autocomplete="on" placeholder="Enter your email" required>
                     <input type="submit" value="Subscribe">
                 </form>
             </section>
