Add contact section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="page-wrapper">
         <!-- WRAPPER FOR HEADER TO KEEP CONTENT CENTERED BEYOND 1200px -->
         <div class="header-wrapper">
-            <header>
+            <header id="audio-engine-header">
                 <img id="hamburger-menu" class="hamburger-menu" src="images/icons/icon-hamburger-menu.png" alt="Mobile Nav Hamburger Menu icon">
 
                 <!-- MOBILE NAV MENU START -->
@@ -220,6 +220,24 @@
                     <input type="email" name="email" autocomplete="on" placeholder="Enter your email" required>
                     <input type="submit" value="Subscribe">
                 </form>
+            </section>
+
+            <section class="audio-engine-contact">
+                <a href="#audio-engine-header">
+                    <img src="images/icons/arrow_upward.svg" alt="Up arrow to navigate to top of page">
+                </a>
+                <article class="contact-links">
+                    <ul>
+                        <li><a href="#0"><img src="images/icons/icon-facebook.png" alt="Facebook contact icon"></a></li>
+                        <li><a href="#0"><img src="images/icons/icon-instagram.png" alt="Instagram contact icon"></a></li>
+                        <li><a href="#0"><img src="images/icons/icon-pinterest.png" alt="Pinterest contact icon"></a></li>
+                        <li><a href="#0"><img src="images/icons/icon-youtube.png" alt="YouTube contact icon"></a></li>
+                    </ul>
+                    <a href="#0">
+                        <img src="images/icons/icon-mail.png" alt="E-mail sign up icon">
+                        <p>Email sign up</p>
+                    </a>
+                </article>
             </section>
         </main>
 
