Remove p tags inside img tag and add a class to up arrow and email containers

--- a/index.html
+++ b/index.html
@@ -223,8 +223,9 @@
             </section>
 
             <section class="audio-engine-contact">
-                <a href="#audio-engine-header">
+                <a class="top-link" href="#audio-engine-header">
                     <img src="images/icons/arrow_upward.svg" alt="Up arrow to navigate to top of page">
+                    Top
                 </a>
                 <article class="contact-links">
                     <ul>
@@ -233,9 +234,9 @@
                         <li><a href="#0"><img src="images/icons/icon-pinterest.png" alt="Pinterest contact icon"></a></li>
                         <li><a href="#0"><img src="images/icons/icon-youtube.png" alt="YouTube contact icon"></a></li>
                     </ul>
-                    <a href="#0">
+                    <a class="email-link" href="#0">
                         <img src="images/icons/icon-mail.png" alt="E-mail sign up icon">
-                        <p>Email sign up</p>
+                        Email sign up
                     </a>
                 </article>
             </section>
