Update email link to email signup as it's an email signup link

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         <li><a href="#0"><img src="images/icons/icon-pinterest.png" alt="Pinterest contact icon"></a></li>
                         <li><a href="#0"><img src="images/icons/icon-youtube.png" alt="YouTube contact icon"></a></li>
                     </ul>
-                    <a class="email-link" href="#0">
+                    <a class="email-signup" href="#0">
                         <img src="images/icons/icon-mail.png" alt="E-mail sign up icon">
                         Email sign up
                     </a>
