Add additional links and attribution content to footer

--- a/index.html
+++ b/index.html
@@ -243,7 +243,37 @@
         </main>
 
         <footer>
-
+            <section class="footer-links">
+                <ul>
+                    <li><a href="#0">Speakers</a></li>
+                    <li><a href="#0">Components</a></li>
+                    <li><a href="#0">Refurbished</a></li>
+                    <li><a href="#0">Find a Store</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#0">Support</a></li>
+                    <li><a href="#0">Explore</a></li>
+                    <li><a href="#0">About</a></li>
+                    <li><a href="#0">contact</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#0">Press</a></li>
+                    <li><a href="#0">Warranty</a></li>
+                    <li><a href="#0">Military</a></li>
+                    <li><a href="#0">Apps</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#0">Privacy</a></li>
+                    <li><a href="#0">Terms</a></li>
+                    <li><a href="#0">Legal</a></li>
+                    <li><a href="#0">News</a></li>
+                </ul>
+            </section>
+            <section class="attribution-links">
+                <p>Icons (except cart and Email) from: <a href="https://simpleicons.org/">https://simpleicons.org</a></p>
+                <p>Cart icon from <a href="https://www.publicdomainpictures.net/en/free-download.php?image-shopping-cart&id=109684">https://www.publicdomainpictures.net/en/free-download.php?image-shopping-cart&id=109684</a></p>
+                <p><a href="https://www.flaticon.com/free-icons/email">Email icons created by Freepik - Flaticon</a> (note to dev - make the this linkable to https://www.flaticon.com/free-icons/email)</p>
+            </section>
         </footer>
     </div>
     <script src="scripts/scripts.js"></script>
