Add missing colon on 'cart icon from'

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 </section>
                 <section class="attribution-links">
                     <p>Icons (except cart and Email) from: <a href="https://simpleicons.org/">https://simpleicons.org</a></p>
-                    <p>Cart icon from <a href="https://www.publicdomainpictures.net/en/free-download.php?image-shopping-cart&id=109684">https://www.publicdomainpictures.net/en/free-download.php?image-shopping-cart&id=109684</a></p>
+                    <p>Cart icon from: <a href="https://www.publicdomainpictures.net/en/free-download.php?image-shopping-cart&id=109684">https://www.publicdomainpictures.net/en/free-download.php?image-shopping-cart&id=109684</a></p>
                     <p><a href="https://www.flaticon.com/free-icons/email">Email icons created by Freepik - Flaticon</a> (note to dev - make the this linkable to https://www.flaticon.com/free-icons/email)</p>
                 </section>
             </footer>
