Add comments and update alt attributes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Audio Engine</title>
+    <title>Only The Best Speakers | Audio Engine</title>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
                 </nav>
 
                 <div id="mobile-nav-overlay" class="mobile-nav-overlay">
-                    <img id="close-x-icon" class="close-x-icon" src="images/icons/icon-close.png" alt="Close X icon for mobile nav menu">
+                    <img id="close-x-icon" class="close-x-icon" src="images/icons/icon-close.png" alt="X icon to close mobile nav menu">
                 </div>
                 <!-- MOBILE NAV MENU END -->
 
@@ -50,6 +50,7 @@
                         <li><a href="#0">Support</a></li>
                     </ul>
                 </nav>
+                <!-- DESKTOP NAV MENU END -->
 
                 <ul class="header-icons-container">
                     <li>
@@ -62,11 +63,11 @@
                         <img src="images/icons/icon-shopping-cart.png" alt="Shopping cart icon">
                     </li>
                 </ul>
-                <!-- DESKTOP NAV MENU END -->
             </header>
         </div>
 
         <main>
+            <!-- AUDIO ENGINE HERO IMAGE START -->
             <section class="audioengine-hero">
                 <picture>
                     <source srcset="images/banner/banner-01-speaker-black.jpg" media="(width >= 48em)">
@@ -79,12 +80,14 @@
                     <a href="#0">Shop wireless speakers</a>
                 </article>
             </section>
+            <!-- AUDIO ENGINE HERO IMAGE END -->
 
-            <section class="shop-speakers">
-                <section class="popular-speakers">
+            <!-- SHOP SPEAKER SECTION START -->
+            <section class="popular-speakers">
+                <section class="best-sellers">
                     <h2>Best sellers</h2>
 
-                    <ul class="current-popular-speakers">
+                    <ul class="current-best-sellers">
                         <li>
                             <img src="images/best_seller/best-seller-01-speaker-red.jpg" alt="A pair of A2+ red desktop speakers">
                             <h3>A2+ Desktop Speakers</h3>
@@ -134,6 +137,7 @@
                     </ul>
                 </section>
             </section>
+            <!-- SHOP SPEAKER SECTION END -->
 
             <section class="all-new-section">
                 <picture>
