Add comments to each section for clarity

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
             </section>
             <!-- SHOP SPEAKER SECTION END -->
 
+            <!-- ALL NEW SECTION START -->
             <section class="all-new-section">
                 <picture>
                     <source srcset="images/background/bg-all-new-section.jpg" media="(width >= 48em)">
@@ -150,7 +151,9 @@
                     <a href="#0">Learn more</a>
                 </article>
             </section>
+            <!-- ALL NEW SECTION END -->
 
+            <!-- SPEAKER COMPARISON START -->
             <section class="speaker-comparison">
                 <h2>Speaker comparison</h2>
 
@@ -181,7 +184,9 @@
                     </tbody>
                 </table>
             </section>
+            <!-- SPEAKER COMPARISON END -->
 
+            <!-- OUR STORY START -->
             <section class="our-story">
                 <picture>
                     <source srcset="images/background/bg-our-story-section.jpg" media="(width >= 64em)">
@@ -196,7 +201,9 @@
                     <a href="#0">Learn more</a>
                 </article>
             </section>
+            <!-- OUR STORY END -->
 
+            <!-- IN THE NEWS START -->
             <section class="in-the-news">
                 <h2>In the news</h2>
 
@@ -208,7 +215,9 @@
                     <img src="images/logos/in-the-news-slider-05-gear-patrol.jpg" alt="Gear Patrol logo">
                 </article>
             </section>
+            <!--IN THE NEWS END -->
 
+            <!-- THIS IS AUDIO ENGINE START -->
             <section class="this-is-audio-engine">
                 <picture>
                     <source srcset="images/background/bg-this-is-audio-engine-section.jpg" media="(width >= 48em)">
@@ -216,7 +225,9 @@
                 </picture>
                 <h2>This is audio engine</h2>
             </section>
+            <!-- THIS IS AUDIO ENGINE END -->
 
+            <!-- JOIN US START -->
             <section class="join-us">
                 <h2>Join us today!</h2>
                 <p>Sign up now to get exclusive access to our features.</p>
@@ -225,7 +236,9 @@
                     <input type="submit" value="Subscribe">
                 </form>
             </section>
+            <!-- JOIN US END -->
 
+            <!-- AUDIO ENGINE CONTACT START -->
             <section class="audio-engine-contact">
                 <a class="top-link" href="#audio-engine-header">
                     <img src="images/icons/arrow_upward.svg" alt="Up arrow to navigate to top of page">
@@ -244,10 +257,12 @@
                     </a>
                 </article>
             </section>
+            <!-- AUDIO ENGINE CONTACT END -->
         </main>
 
         <div class="footer-wrapper">
             <footer>
+                <!-- FOOTER LINKS SECTION START -->
                 <section class="footer-links">
                     <ul>
                         <li><a href="#0">Speakers</a></li>
@@ -279,6 +294,7 @@
                     <p>Cart Icon from: <a href="https://www.publicdomainpictures.net/en/free-download.php?image-shopping-cart&id=109684">https://www.publicdomainpictures.net/en/free-download.php?image-shopping-cart&id=109684</a></p>
                     <p><a href="https://www.flaticon.com/free-icons/email">Email icons created by Freepik - Flaticon</a> (note to dev - make the this linkable to https://www.flaticon.com/free-icons/email)</p>
                 </section>
+                <!-- FOOTER LINKS SECTION END -->
             </footer>
         </div>
     </div>
