Add a tags to in the news icons
Update popular speakers section comment to match name change

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </section>
             <!-- AUDIO ENGINE HERO IMAGE END -->
 
-            <!-- SHOP SPEAKER SECTION START -->
+            <!-- POPULAR SPEAKERS SECTION START -->
             <section class="popular-speakers">
                 <section class="best-sellers">
                     <h2>Best sellers</h2>
@@ -137,7 +137,7 @@
                     </ul>
                 </section>
             </section>
-            <!-- SHOP SPEAKER SECTION END -->
+            <!-- POPULAR SPEAKERS SECTION END -->
 
             <!-- ALL NEW SECTION START -->
             <section class="all-new-section">
@@ -208,11 +208,11 @@
                 <h2>In the news</h2>
 
                 <article class="audio-engine-logos-container">
-                    <img src="images/logos/in-the-news-slider-01-rolling-stone.jpg" alt="Rolling Stone logo">
-                    <img src="images/logos/in-the-news-slider-02-mens-health.jpg" alt="Men's Health logo">
-                    <img src="images/logos/in-the-news-slider-03-forbes-life.jpg" alt="Forbes Life logo">
-                    <img src="images/logos/in-the-news-slider-04-chicago-tribune.jpg" alt="Chicago in-the-news-slider-04-chicago-tribune">
-                    <img src="images/logos/in-the-news-slider-05-gear-patrol.jpg" alt="Gear Patrol logo">
+                    <a href="#0"><img src="images/logos/in-the-news-slider-01-rolling-stone.jpg" alt="Rolling Stone logo"></a>
+                    <a href="#0"><img src="images/logos/in-the-news-slider-02-mens-health.jpg" alt="Men's Health logo"></a>
+                    <a href="#0"><img src="images/logos/in-the-news-slider-03-forbes-life.jpg" alt="Forbes Life logo"></a>
+                    <a href="#0"><img src="images/logos/in-the-news-slider-04-chicago-tribune.jpg" alt="Chicago in-the-news-slider-04-chicago-tribune"></a>
+                    <a href="#0"><img src="images/logos/in-the-news-slider-05-gear-patrol.jpg" alt="Gear Patrol logo"></a>
                 </article>
             </section>
             <!--IN THE NEWS END -->
